--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+html::-webkit-scrollbar {
+  display: none;
+}
+
+.detailActive {
+  border-bottom: 4px solid rgba(0, 128, 0, 0.704);
+  color: rgba(0, 128, 0, 0.704);
+}
+
+.active {
+  color: rgba(0, 128, 0, 0.704);
+}
+
+.textActive {
+  color: rgba(0, 0, 0, 0.836);
+  text-decoration: none;
+}
+
+.notactive {
+  color: gray;
 }
