--- a/src/component/productdetails/aboutReview/about.css
+++ b/src/component/productdetails/aboutReview/about.css
@@ -2,19 +2,26 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 100%;
+  width: 90%;
   justify-content: space-between;
   padding: 20px;
+  border-bottom: 1px solid gray;
 }
 
 .about-details .details-brand {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+.about-details .details-brand .brand {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 5px;
 }
 
-.about-details .details-brand .brand-item {
+.about-details .details-brand .brand .brand-item {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 600;
@@ -24,7 +31,7 @@
   color: rgba(0, 0, 0, 0.424);
 }
 
-.about-details .details-brand .brand-name {
+.about-details .details-brand .brand .brand-name {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 600;
@@ -36,12 +43,20 @@
 
 .about-details .item-color {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  /* justify-content: flex-start; */
+  gap: 10px;
+}
+
+.about-details .item-color .item {
+  display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   gap: 5px;
 }
 
-.about-details .item-color .color-heading {
+.about-details .item-color .item .color-heading {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 600;
@@ -51,7 +66,7 @@
   color: rgba(0, 0, 0, 0.424);
 }
 
-.about-details .item-color .item-color {
+.about-details .item-color .item .item-color {
   font-family: "Roboto";
   font-style: normal;
   font-weight: 600;
